--- a/images/datascience-notebook/Dockerfile
+++ b/images/datascience-notebook/Dockerfile
@@ -1,4 +1,4 @@
-FROM jupyter/datascience-notebook
+FROM jupyter/datascience-notebook:hub-1.3.0
 
 USER root
 
@@ -9,10 +9,9 @@ RUN pip install -r /tmp/requirements.txt
 
 RUN wget -nv https://downloads.globus.org/globus-connect-personal/linux/stable/globusconnectpersonal-latest.tgz -O /tmp/globusconnectpersonal-latest.tgz
 RUN tar -xzvf /tmp/globusconnectpersonal-latest.tgz -C /opt
-RUN mv $(find /opt -type 'd' -name 'globus*' -maxdepth 1) /opt/gcp
+RUN mv $(find /opt -type 'd' -maxdepth 1 -name 'globus*') /opt/gcp
 
-COPY initenv.sh /usr/local/bin/initenv.sh
-COPY tini-wrapper /usr/local/bin/tini-wrapper
 COPY setupgcp.py /usr/local/bin/setupgcp.py
+COPY rungcp.sh /usr/local/bin/rungcp.sh
 
 USER $NB_UID
